<resources>
    <string name="app_name">AnunciaÊ</string>

    <!-- Tela login -->
    <string name="login_noaccount">Não tem uma conta? Cadastrar</string>
    <string name="login_email">E-mail*</string>
    <string name="login_pass">Senha*</string>
    <string name="buttonLogin">Entrar</string>
    <string name="buttonAdd">Cadastrar</string>
    <string name="login_error">Erro ao fazer login.</string>
    <string name="login_error_pass">Senha inválida.</string>
    <string name="login_error_email">Email inválido.</string>
    <string name="login_complete_fields">Preencha todos os campos.</string>
    <string name="network_error_pass">Verifique a conexão com a internet.</string>

    <!-- Tela cadastro -->
    <string name="add_confirmPass">Confirmar senha*</string>
    <string name="add_success">Usuário incluído com sucesso.</string>
    <string name="add_error_invalidmail">E-mail inválido.</string>
    <string name="add_error_mailalready">E-mail já cadastrado.</string>
    <string name="add_error">Erro ao cadastrar usuário.</string>
    <string name="add_error_confirmPass">*Senhas não conferem</string>
    <string name="add_weakpass">Senha fraca</string>
    <string name="add_nome">Nome*</string>

    <!-- Tela escolha condominio -->
    <string name="condominium">Escolha o condomínio que você mora</string>
    <string name="add_condominium">Seu condomínio não está na lista? Cadastre aqui</string>
    <string name="botao_continuar">Continuar</string>
    <string name="select">Selecione</string>

    <!-- Menu Configuracao Esquerdo -->
    <string name="menu_item_conf">Configurações</string>
    <string name="menu_item_Sair">Sair</string>

    <!-- Menu Lateral Direito-->
    <string name="mail">luna.vaz.barros@gmail.com</string>
    <string name="navigation_drawer_open">Abrir menu de navegação</string>
    <string name="navigation_drawer_close">Fechar menu de navegação</string>
    <string name="anuncios">Anúncios do dia</string>
    <string name="negocios">Lista de negócios</string>
    <string name="empreendedores">EMPREENDEDORES</string>
    <string name="novo_negocio">Cadastrar novo negócio</string>
    <string name="gerenciar_negocio">Gerenciar negócio</string>

    <!-- Tela cadastro de negócio -->
    <string name="cad_titulo">Cadastro de negócio</string>
    <string name="cad_nome">Nome*</string>
    <string name="cad_breve_desc">Breve descrição*</string>
    <string name="cad_desc">Descrição completa*</string>
    <string name="cad_categoria">Categoria*</string>
    <string name="cad_contato">Contato*</string>
    <string name="cad_aberto">Aberto</string>
    <string name="cad_cadastrar">Cadastrar</string>

    <!-- Fragmentos -->
    <string name="frag_anuncios">Anúncios</string>
    <string name="frag_negocios">Negócios</string>
    <string name="titulo_tab_anuncios">"ANÚNCIOS"</string>
    <string name="titulo_tab_negocios">"NEGÓCIOS"</string>
    <string name="titulo_tela_negocios">Empreendimentos do condomínio</string>
    <string name="titulo_tela_detalhe_negocio">Negócio detalhado</string>

    <!-- Tela gerenciar negocios -->
    <string name="titulo_gerenciar_negocio">Seus empreendimentos cadastrados</string>

</resources>
