<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundAccent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="84dp"
        android:text="@string/login_email"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/fontSizeDefault" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/textPrimary"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/emailText"
        android:layout_below="@+id/emailText"
        android:layout_marginTop="19dp"
        android:text="@string/login_pass"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/fontSizeDefault" />

    <EditText
        android:id="@+id/senhaText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:backgroundTint="@color/textPrimary"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/senhaText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/buttonLogin"
        android:textColor="@color/textPrimary" />

    <TextView
        android:id="@+id/linkNoAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/senhaText"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="@dimen/margin_left"
        android:gravity="center"
        android:text="@string/login_noaccount"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/fontSizeDefault" />

</RelativeLayout>
