<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundAccent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="136dp"
        android:text="@string/condominium"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/fontSizeDefault"
        />

    <Spinner
        android:id="@+id/spinnerCondominio"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginTop="20dp"
        android:drawSelectorOnTop="true"
        android:textColor="@color/textPrimary" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerCondominio"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginTop="163dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/add_condominium"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/fontSizeDefault" />

    <Button
        android:id="@+id/botaoContinuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerCondominio"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/botao"
        android:text="@string/botao_continuar"
        android:theme="@style/buttonTheme" />
</RelativeLayout>
