<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundAccent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="84dp"
        android:text="@string/login_email"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/fontSizeDefault" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/textPrimary"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/emailText"
        android:layout_below="@+id/emailText"
        android:layout_marginTop="20dp"
        android:text="@string/login_pass"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/fontSizeDefault" />

    <EditText
        android:id="@+id/senhaText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:backgroundTint="@color/textPrimary"/>

    <Button
        android:id="@+id/buttonCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/buttonAdd"
        android:textColor="@color/textPrimary" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/senhaText"
        android:layout_below="@+id/senhaText"
        android:layout_marginTop="20dp"
        android:text="@string/add_confirmPass"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/fontSizeDefault" />

    <EditText
        android:id="@+id/confirmarSenhaText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/textPrimary"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textErrorConfirmPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/confirmarSenhaText"
        android:layout_below="@+id/confirmarSenhaText"
        android:layout_marginTop="13dp"
        android:textColor="@color/error"
        android:textSize="@dimen/fontSizeDefault" />

</RelativeLayout>
